<resources>
    <string name="app_name">1-4</string>
    <string name="help">Tips</string>
    <string name="login">登陆</string>
    <string name="view">Welcome</string>
    <string name="usr">Account</string>
    <string name="pwd">PassWord</string>
    <string name="show">Show writing</string>
    <string name="please">Please write something</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
</resources>
