<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <Button-->
<!--            android:id="@+id/tips"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAllCaps="false"-->
<!--            android:text="@string/help"/>-->
        <Button
            android:id="@+id/tips"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/check_border"
            android:text="@string/help"/>

<!--        <Button-->
<!--            android:id="@+id/login"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAllCaps="false"-->
<!--            android:text="@string/login"/>-->


        <Button
            android:id="@+id/show"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/check_border"
            android:text="@string/show"/>
<!--            android:text="确认" />-->
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/check_border"
            android:text="@string/login"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>