<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <TextView-->
<!--            android:id="@+id/text_welcome"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="left|center"-->
<!--            android:text=""/>-->
        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="left|center"
            android:text="Welcome"
            android:textSize="20sp"
            />

<!--        <EditText-->
<!--            android:id="@+id/edit_write"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:maxLines="2"-->
<!--            android:hint="@string/please"/>-->

        <EditText
            android:id="@+id/edit_write"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/please"
            android:inputType="text"
            android:textSize="30sp"
            tools:ignore="MissingConstraints" />

<!--        <Button-->
<!--            android:id="@+id/btn_back"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAllCaps="false"-->
<!--            android:text="@string/back"/>-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/ok"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/check_border"
            android:text="@string/ok"/>
        <Button
            android:id="@+id/btn_back"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/check_border"
            android:text="@string/back"/>

    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>